--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,15 +13,10 @@ jobs:
         name: lint
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v2
             - uses: actions/setup-go@v4
               with:
                   go-version: '1.20'
-                  cache: false
-            - name: golangci-lint
+            - name: Run linter
               uses: golangci/golangci-lint-action@v3
-              with:
-                  # Require: The version of golangci-lint to use.
-                  # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
-                  # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
-                  version: v1.53
+              run: go get github.com/golangci/golangci-lint/cmd/golangci-lint golangci-lint run
