--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,6 +14,10 @@ run:
 # This file contains only configs which differ from defaults.
 # All possible options can be found here https://github.com/golangci/golangci-lint/blob/master/.golangci.reference.yml
 linters-settings:
+  typecheck:
+    ignore-packages:
+      - migrate
+
   cyclop:
     # The maximal code complexity to report.
     # Default: 10
