--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,11 +20,8 @@ jobs:
             - uses: actions/setup-go@v4
               with:
                   go-version: '1.20'
-                  cache: false
+                  check-latest: true
             - name: golangci-lint
-              uses: golangci/golangci-lint-action@v3.2.0
+              uses: golangci/golangci-lint-action@v3.6.0
               with:
-                  # Require: The version of golangci-lint to use.
-                  # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
-                  # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
-                  version: v1.51.2
+                  version: latest
