--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,4 +24,4 @@ jobs:
             - name: golangci-lint
               uses: golangci/golangci-lint-action@v3.6.0
               with:
-                  version: 1.51
+                  version: v1.51.2
