--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,10 @@
-name: tests
+name: autotests
+
 on:
+    pull_request:
     push:
-        branches: ["main"]
-
-
-
+        branches:
+            - main
 jobs:
     test:
         runs-on: macos-latest
