--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,29 +8,36 @@ on:
 jobs:
     test:
         runs-on: macos-latest
-        services:
-            postgres:
-                image: postgres:14
-                env:
-                    POSTGRES_USER: qwerty
-                    POSTGRES_PASSWORD: qwerty
-                    POSTGRES_DB: postgres
-                ports:
-                    - 5438:5432
-                options: >-
-                    --health-cmd pg_isready
-                    --health-interval 10s
-                    --health-timeout 5s
-                    --health-retries 5
+
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-go@v4
               with:
                   go-version: '1.20'
                   check-latest: true
+
+            - name: Run Docker container
+              run: docker run --name postgres-container -e POSTGRES_USER=qwerty -e POSTGRES_PASSWORD=qwerty -e POSTGRES_DB=postgres -p 5438:5432 --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5 postgres:14
+              services:
+                  postgres:
+                      image: postgres:14
+                      env:
+                          POSTGRES_USER: qwerty
+                          POSTGRES_PASSWORD: qwerty
+                          POSTGRES_DB: postgres
+                      ports:
+                          - 5438:5432
+                      options: >-
+                          --health-cmd pg_isready
+                          --health-interval 10s
+                          --health-timeout 5s
+                          --health-retries 5
+
             - name: Run tests integration
               run: go test -v ./server/...
             - name: Start server
               run: go run ./server main.go
             - name: Run tests e2e
               run: go test -v ./client/..
+
+
