--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
             - main
 jobs:
     test:
-        runs-on: macos-latest
+        runs-on: ubuntu-latest
         services:
           postgres:
             image: postgres:latest
@@ -30,6 +30,10 @@ jobs:
               with:
                   go-version: '1.20'
                   check-latest: true
+            - name: Install Docker
+              run: |
+                sudo apt-get update
+                sudo apt-get install -y docker.io
             - name: Start Postgres
               run: docker-compose up -d postgres
             - name: Wait for Postgres to start
