--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,10 +19,10 @@ jobs:
               run: docker-compose up -d
             - name: Run tests integration
               run: go test -v ./server/...
-            - name: Start server
-              run: go run ./server main.go
-            - name: Run tests e2e
-              run: go test -v ./client/..
+            - name: Run E2E tests server-client
+              run: go run ./server main.go && go test -v ./client/..
+
+
 
 
 
