--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,11 @@ jobs:
             - name: Run tests integration
               run: go test -v ./server/...
             - name: Run E2E tests server-client
-              run: go run ./server main.go && go test -v ./client/.. exit 1
+              run: |
+                go run ./server main.go &sleep 5 
+                go test -v ./client/..
+                kill $(lsof -t -i :5050)
+                exit 1
 
 
 
