--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Run E2E tests server-client
               run: |
                 go run ./server main.go &sleep 5 
-                go test -v ./client/..
+                go test -v ./client/tests
                 kill $(lsof -t -i :5050)
                 exit 1
 
